namespace Runtime.Domain
{
    public enum CodeColor
    {
        Red,
        Blue,
        Yellow,
        Green,
        White,
        Black,
    }
}