namespace Runtime.Domain
{
    public enum KeyColor
    {
        None,
        White,
        Black,
    }
}